@@ -1,4 +1,5 @@
 0.16
+ - Add VASEKD CPAN account.
  - Improve LICENSE AND COPYRIGHT section in doc.
  - Update copyright years.
 
